# spatialhub

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
R/: _clean-up_utils.R  _map_CosMx_panels.R  _retrieve_AnnotHub_db.R  annot_prepare_reference.R  ashlar_convert_coords.R  probeqc_calculate_metrics.R
archive/R/: annot_singleR.R
archive/python/: annot_celltypist_predict.py  annot_celltypist_train.py  annot_subset_reference.py
bash/: cosmx_setup.sh
examples/: misc_tips.md  workflow_cosmx_mouse_gut.md  workflow_cosmx_mouse_gut_part1.md  workflow_cosmx_mouse_gut_part2.md  workflow_cosmx_mouse_gut_part3.md
examples/files/: mouse_ibd_hh_spatialhub_samples.tsv
notebooks/: review_label-transfer_scANVI_example.ipynb  transcripts_spatial_plots.ipynb
python/: annot_scanvi_predict.py  annot_scanvi_train.py  annot_subset_reference.py  ashlar_rename_tiles.py  ashlar_setup.py  ashlar_stitch_cosmx.py  ashlar_zarr.py  ashlar_zarr_debug.py  baysor_anndata.py  baysor_filter.py  baysor_setup.py  extractCoords_fetch.py  muspanPCF_compute.py  requirements.txt  roi_fetch.py  segment_setup.py  sopa_segment_setup.py  ssam_utils.py
reports/: _graphical_params.Rmd  probeqc_FOV_report.Rmd  probeqc_cell_report.Rmd  probeqc_header.Rmd
spatialhub/: cli.py  entry.py  pipeline_annot.py  pipeline_ashlar.py  pipeline_baysor.py  pipeline_extractCoords.py  pipeline_muspanPCF.py  pipeline_probeqc.py  pipeline_roi.py  pipeline_segment.py  pipeline_sopa_segment_img.py  pipeline_sopa_segment_tx.py  spaceranger.smk
spatialhub/CosMx/: make_zarr.smk
spatialhub/VisiumHD/: nmf.smk  rctd.smk  segmentation.smk  spaceranger.smk
spatialhub/configfiles/: CosMx_Ashlar.yaml
spatialhub/scripts/: gen_fov_grid.cosmx.py
spatialhub/tasks/: __init__.py  adata_utils.py  parameters.py  profile.py  samples.py  setup.py
spatialhub/yaml/: config_cosmx_mkzarr.yml  config_nmf.yml  config_rctd.yml  config_spaceranger.yml  config_visium_segmentation.yml  (+10 more)
toml/: baysor_config.toml
(+45 files in other folders)
