[project]
name = "spatialhub"
version = "0.1.0"
description = "Pipelines for Spatial Transcriptomics Analysis."
authors = [{ name = "Sansom Lab", email = "" }]
dependencies = [
    "snakemake>=9",
    "snakemake-executor-plugin-drmaa",
    "ashlar",
    "anndata",
    "scanpy>=1.12.1",
    "harmonypy",
    "scvi-tools",
    "spatialdata",
    "spatialdata-io",
    "spatialdata-plot",
    "rctd-py",
    "spin @ git+https://github.com/wanglab-broad/spin@main",
    "ipykernel",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
